implement theme switcher

--- a/day 001/calculator/index.html
+++ b/day 001/calculator/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button class="theme">Theme</button>
   <div class="container">
     <div>
       <input class="input" type="text" readonly>
     </div>
     <hr>
     <div class="btn-container">
-      <!-- <button class="btn theme">Theme</button> -->
       <button id="ac-btn" class="btn">AC</button>
       <button class="btn">/</button>
       <button class="btn">*</button>
