more fixes for theme

--- a/day 001/calculator/index.html
+++ b/day 001/calculator/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button class="theme">Theme</button>
+  <button class="theme">Dark</button>
   <div class="container">
     <div>
       <input class="input" type="text" readonly>
